--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 main {
   min-height: 80vh;
+
 }
 
 h3{
@@ -18,4 +25,9 @@ h2{
 
 .rating-span{
   margin: 0.1rem 0;
+}
+
+/* COMPONENT / PRODUCT - ProductName */
+#product-name-link:hover {
+ font-weight: 800;
 }
