--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,71 +6,55 @@
 
 main {
   min-height: 80vh;
-
 }
 
-h3{
+h3 {
   padding: 1rem 0;
 }
 
-h1{
+h1 {
   font-size: 1.8rem;
   padding: 1rem 0;
 }
 
-h2{
+h2 {
   font-size: 1.4rem;
-  padding: 0.5rem;
+  padding: 0.5rem 0;
 }
 
-.rating-span{
-  margin: 0.1rem 0;
+.rating span {
+  margin: 0.1rem;
 }
 
-/* COMPONENT / PRODUCT - ProductName */
-#product-name-link:hover {
- font-weight: 800;
-}
-
-
-/* CAROUSEL */
-
-/* #carousel {
-  height: 500px;
-} */
-
+/* carousel */
 .carousel-item-next,
-.carousel-item-prv,
+.carousel-item-prev,
 .carousel-item.active {
   display: flex;
-  align-content: center;
-  justify-content: center;
+  text-align: center;
 }
-
 .carousel-caption {
-  /* position: absolute; */
+  position: absolute;
   top: 0;
 }
 
 .carousel-caption h2 {
-  position: relative;
-  display: block;
   color: #fff;
-  /* display: block;
-  padding-bottom: 10px; */
 }
 
 .carousel img {
-  /* display: flex;
-  justify-self: center;
-  align-self: center; */
-  display: block;
-  border-radius: 50%;
   height: 300px;
   padding: 30px;
-  margin: 60px auto 40px auto;
+  margin: 40px;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-/* .carousel .a {
+.carousel a {
   margin: 0 auto;
-}  */
+}
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.5vw;
+  }
+}
