--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,6 +32,7 @@ h2 {
 .carousel-item.active {
   display: flex;
   text-align: center;
+  z-index: 1;
 }
 .carousel-caption {
   position: absolute;
@@ -42,16 +43,28 @@ h2 {
   color: #fff;
 }
 
-.carousel img {
+/* .carousel img {
   height: 300px;
   padding: 30px;
   margin: 40px;
   border-radius: 50%;
   margin-left: auto;
   margin-right: auto;
+} */
+
+img {
+  transition: 0.5s all ease-in-out;
+}
+img:hover{
+  transform: scale(1.3);
 }
 .carousel a {
   margin: 0 auto;
+}
+
+.outOfStock {
+  margin: 0;
+  padding: 0;
 }
 @media (max-width: 900px) {
   .carousel-caption h2 {
