--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,14 @@ main {
   min-height: 80vh;
 }
 
+.main-title {
+  font-family: 'Philosopher', sans-serif;
+  font-size: 3rem;
+  color: white;
+}
+
+
+
 h3 {
   padding: 1rem 0;
 }
@@ -52,10 +60,10 @@ h2 {
   margin-right: auto;
 } */
 
-img {
+.product-img {
   transition: 0.5s all ease-in-out;
 }
-img:hover{
+.product-img:hover{
   transform: scale(1.3);
 }
 .carousel a {
@@ -70,4 +78,8 @@ img:hover{
   .carousel-caption h2 {
     font-size: 2.5vw;
   }
+}
+
+#search-btn {
+  border: 2px solid rgb(24, 72, 24);
 }
