--- a/frontend/src/styles/homescreen.css
+++ b/frontend/src/styles/homescreen.css
@@ -52,7 +52,34 @@
     font-size: 3rem;
     bottom: 0;
     color: whitesmoke;
+    cursor: pointer;
     opacity: 0.7;
     display: flex;
+    animation-delay: 4s;
+    animation-duration: 3s;
     justify-self: center;
+    transition: all 0.5s ease;
+    animation-name: icon-hop;
+}
+
+#down-icon:hover {
+    transform: scale(1.3) translateY(-10px);
+}
+
+@keyframes icon-hop {
+    0% {
+        transform: translateY(0);
+    }
+    25% {
+        transform: translateY(-20px);
+    }
+    50% {
+        transform: translateY(0);
+    }
+    75% {
+        transform: translateY(-20px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
