--- a/frontend/src/styles/classes.css
+++ b/frontend/src/styles/classes.css
@@ -3,16 +3,26 @@
     height: 100%;
 }
 
-h3 {
+.hr {
+    background-color: rgb(128, 128, 128);
+}
+
+.class-headers {
     font-family: 'Philosopher', sans-serif;
     font-weight: 800;
     padding: 0;
+    color: whitesmoke;
+}
+
+p {
+    color: rgb(177, 177, 177);
 }
 
 .class-title {
     font-family: 'Philosopher', sans-serif;
     font-size: 4rem;
     text-align: center;
+    color: whitesmoke;
 }
 
 .class-container {
@@ -39,25 +49,27 @@ h3 {
 }
 
 #up-icon-section {
+    width: 100%;
     bottom: 0;
-    opacity: 0.7;
     display: flex;
     justify-content: center;
-    transition: all 0.5s ease;
+    color: rgb(206, 206, 206);
 }
 
 #up-icon {
-    cursor: pointer;
-    opacity: 0.7;
+    width: 30px;
     font-size: 3rem;
-    width: 100%;
+    bottom: 0;
+    color: whitesmoke;
     text-align: center;
-    /* animation-delay: 4s;
-    animation-duration: 3s;
-    transition: all 0.5s ease;
-    animation-name: icon-hop; */
+    display: flex;
+    justify-self: center;
+    margin: auto;
+    transition: 0.4s;
+    cursor: pointer;
 }
 
-i:hover {
+#up-icon:hover {
     transform: scale(1.2);
+    color: #7fb1ad;
 }
