--- a/frontend/src/styles/homescreen.css
+++ b/frontend/src/styles/homescreen.css
@@ -7,37 +7,36 @@
     left: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
-    z-index: -2;
-}
-
-.background-image {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-    display: flex;
     justify-self: center;
-    align-self: center;
-    z-index: -1;
-    overflow: hidden;
+    align-items: center;
+    background-image: url('../girl.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+ 
 }
 
 .home-btn {
     width: 100px;
     padding: 5px;
-    font-size: 1.2em;
+    font-size: 1.3em;
     font-weight: 600;
-    background-color: rgb(0, 0, 0, 0);
-    border: 1.2px solid whitesmoke;
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid whitesmoke;
     color: whitesmoke;
+    transition: all 0.5s ease;
+    z-index: 1;
+}
+
+.home-btn:hover{
+    transform: scale(1.2);
+    border: 2px solid #769a97;
 }
 
 .btn-section {
     display: flex;
     justify-content: center;
-    gap: 2%;
+    gap: 50px;
 }
 
 .down-section {
@@ -64,6 +63,7 @@
 
 #down-icon:hover {
     transform: scale(1.3) translateY(-10px);
+    color: #89bbb7;
 }
 
 @keyframes icon-hop {
