deleted uneccessary images, opacity to background image and redid contact page

--- a/frontend/src/styles/contact.css
+++ b/frontend/src/styles/contact.css
@@ -1,8 +1,56 @@
-.contact-container {
+#contact-container {
     margin: auto;
-    width: 50%;
-    min-height: 80vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
+
+#contact-title {
+    font-size: 36px;
+    text-align: center;
+}
+
+#contact-text {
+    width: 40%;
+    max-width: 690px;
+}
+
+#contact-text p {
+    color: rgb(196, 196, 196);
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+#contact-text h5{
+    font-family: sans-serif;
+    font-weight: 800;
+}
+
+#contact-two {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    max-width: 1200px;
+}
+
+#contact-img {
+    width: 100%;
+    max-width: 690px;
+    min-width: 400px;
+    box-shadow: 2px 5px 10px 2px rgba(128, 128, 128, 0.529);
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 750px) {
+    #contact-two {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #contact-text {
+        width: 400px;
+        margin: auto;
+    }
+    #contact-map{
+        width: 400px;
+    }
+} 
