--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,12 +5,12 @@
   
 }
 #app-container {
-  background-image: url('./new-bg.jpg');
+  background-image:
+  linear-gradient(to bottom, rgba(0, 0, 0, 0.221), rgba(0, 0, 0, 0.447)),
+  url('./shop-bg.jpg');
   background-size: cover;
   background-attachment: fixed;
-  background-repeat: no-repeat;
-
-
+  background-repeat: repeat;
 }
 
 main {
@@ -34,8 +34,9 @@ h3 {
 }
 
 h1 {
-  font-size: 1.8rem;
+  font-size: 3rem;
   padding: 1rem 0;
+  font-family: 'Philosopher', sans-serif;
   color: white;
 }
 
