--- a/frontend/src/styles/classes.css
+++ b/frontend/src/styles/classes.css
@@ -1,11 +1,12 @@
 #classes {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    min-height: 96vh;
 }
 
 .class-headers {
-    font-family: 'Philosopher', sans-serif;
-    font-weight: 800;
+    font-family: sans-serif;
+    font-weight: 400;
     padding: 0;
     font-size: 1.6em;
     color: #fff;
